Source/Alternet.UI.Pal/Api/ComboBox.Api.h

using namespace Alternet::UI;
ALTERNET_UI_API ComboBox* ComboBox_Create_()
{
    return MarshalExceptions<ComboBox*>([&](){
        return new ComboBox();
    });
}
ALTERNET_UI_API c_bool ComboBox_GetAllowMouseWheel_(ComboBox* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetAllowMouseWheel();
    });
}
ALTERNET_UI_API void ComboBox_SetAllowMouseWheel_(ComboBox* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetAllowMouseWheel(value);
    });
}
ALTERNET_UI_API char16_t* ComboBox_GetEmptyTextHint_(ComboBox* obj)
{
    return MarshalExceptions<char16_t*>([&](){
        return AllocPInvokeReturnString(obj->GetEmptyTextHint());
    });
}
ALTERNET_UI_API void ComboBox_SetEmptyTextHint_(ComboBox* obj, const char16_t* value)
{
    MarshalExceptions<void>([&](){
        obj->SetEmptyTextHint(value);
    });
}
ALTERNET_UI_API c_bool ComboBox_GetHasBorder_(ComboBox* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetHasBorder();
    });
}
ALTERNET_UI_API void ComboBox_SetHasBorder_(ComboBox* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetHasBorder(value);
    });
}
ALTERNET_UI_API int ComboBox_GetItemsCount_(ComboBox* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetItemsCount();
    });
}
ALTERNET_UI_API c_bool ComboBox_GetIsEditable_(ComboBox* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetIsEditable();
    });
}
ALTERNET_UI_API void ComboBox_SetIsEditable_(ComboBox* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetIsEditable(value);
    });
}
ALTERNET_UI_API int ComboBox_GetSelectedIndex_(ComboBox* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetSelectedIndex();
    });
}
ALTERNET_UI_API void ComboBox_SetSelectedIndex_(ComboBox* obj, int value)
{
    MarshalExceptions<void>([&](){
        obj->SetSelectedIndex(value);
    });
}
ALTERNET_UI_API int ComboBox_GetTextSelectionStart_(ComboBox* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetTextSelectionStart();
    });
}
ALTERNET_UI_API int ComboBox_GetTextSelectionLength_(ComboBox* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetTextSelectionLength();
    });
}
ALTERNET_UI_API PointI_C ComboBox_GetTextMargins_(ComboBox* obj)
{
    return MarshalExceptions<PointI_C>([&](){
        return obj->GetTextMargins();
    });
}
ALTERNET_UI_API int ComboBox_GetOwnerDrawStyle_(ComboBox* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetOwnerDrawStyle();
    });
}
ALTERNET_UI_API void ComboBox_SetOwnerDrawStyle_(ComboBox* obj, int value)
{
    MarshalExceptions<void>([&](){
        obj->SetOwnerDrawStyle(value);
    });
}
ALTERNET_UI_API void* ComboBox_GetPopupWidget_(ComboBox* obj)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetPopupWidget();
    });
}
ALTERNET_UI_API void* ComboBox_GetEventDc_(ComboBox* obj)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetEventDc();
    });
}
ALTERNET_UI_API RectI_C ComboBox_GetEventRect_(ComboBox* obj)
{
    return MarshalExceptions<RectI_C>([&](){
        return obj->GetEventRect();
    });
}
ALTERNET_UI_API int ComboBox_GetEventItem_(ComboBox* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetEventItem();
    });
}
ALTERNET_UI_API int ComboBox_GetEventFlags_(ComboBox* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetEventFlags();
    });
}
ALTERNET_UI_API int ComboBox_GetEventResultInt_(ComboBox* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetEventResultInt();
    });
}
ALTERNET_UI_API void ComboBox_SetEventResultInt_(ComboBox* obj, int value)
{
    MarshalExceptions<void>([&](){
        obj->SetEventResultInt(value);
    });
}
ALTERNET_UI_API c_bool ComboBox_GetEventCalled_(ComboBox* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetEventCalled();
    });
}
ALTERNET_UI_API void ComboBox_SetEventCalled_(ComboBox* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetEventCalled(value);
    });
}
ALTERNET_UI_API void ComboBox_DismissPopup_(ComboBox* obj)
{
    MarshalExceptions<void>([&](){
        obj->DismissPopup();
    });
}
ALTERNET_UI_API void ComboBox_ShowPopup_(ComboBox* obj)
{
    MarshalExceptions<void>([&](){
        obj->ShowPopup();
    });
}
ALTERNET_UI_API int ComboBox_DefaultOnMeasureItemWidth_(ComboBox* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->DefaultOnMeasureItemWidth();
    });
}
ALTERNET_UI_API int ComboBox_DefaultOnMeasureItem_(ComboBox* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->DefaultOnMeasureItem();
    });
}
ALTERNET_UI_API void ComboBox_DefaultOnDrawBackground_(ComboBox* obj)
{
    MarshalExceptions<void>([&](){
        obj->DefaultOnDrawBackground();
    });
}
ALTERNET_UI_API void ComboBox_DefaultOnDrawItem_(ComboBox* obj)
{
    MarshalExceptions<void>([&](){
        obj->DefaultOnDrawItem();
    });
}
ALTERNET_UI_API void* ComboBox_CreateItemsInsertion_(ComboBox* obj)
{
    return MarshalExceptions<void*>([&](){
        return obj->CreateItemsInsertion();
    });
}
ALTERNET_UI_API void ComboBox_AddItemToInsertion_(ComboBox* obj, void* insertion, const char16_t* item)
{
    MarshalExceptions<void>([&](){
        obj->AddItemToInsertion(insertion, item);
    });
}
ALTERNET_UI_API void ComboBox_CommitItemsInsertion_(ComboBox* obj, void* insertion, int index)
{
    MarshalExceptions<void>([&](){
        obj->CommitItemsInsertion(insertion, index);
    });
}
ALTERNET_UI_API void ComboBox_InsertItem_(ComboBox* obj, int index, const char16_t* value)
{
    MarshalExceptions<void>([&](){
        obj->InsertItem(index, value);
    });
}
ALTERNET_UI_API void ComboBox_RemoveItemAt_(ComboBox* obj, int index)
{
    MarshalExceptions<void>([&](){
        obj->RemoveItemAt(index);
    });
}
ALTERNET_UI_API void ComboBox_ClearItems_(ComboBox* obj)
{
    MarshalExceptions<void>([&](){
        obj->ClearItems();
    });
}
ALTERNET_UI_API void ComboBox_SelectTextRange_(ComboBox* obj, int start, int length)
{
    MarshalExceptions<void>([&](){
        obj->SelectTextRange(start, length);
    });
}
ALTERNET_UI_API void ComboBox_SelectAllText_(ComboBox* obj)
{
    MarshalExceptions<void>([&](){
        obj->SelectAllText();
    });
}
ALTERNET_UI_API void ComboBox_SetItem_(ComboBox* obj, int index, const char16_t* value)
{
    MarshalExceptions<void>([&](){
        obj->SetItem(index, value);
    });
}
ALTERNET_UI_API void ComboBox_SetEventCallback_(ComboBox::ComboBoxEventCallbackType callback)
{
    ComboBox::SetEventCallback(callback);
}